name: stripe-concepts
version: 0.1.0.0

synopsis: Types for the Stripe API

description:
    This is a minimal package that just defines a common set of types
    for working with the <https://stripe.com/ Stripe> API.

homepage:    https://github.com/typeclasses/stripe
bug-reports: https://github.com/typeclasses/stripe/issues

author:     Chris Martin
maintainer: Chris Martin, Julie Moronuki

copyright: 2018 Typeclass Consulting, LLC
license: MIT
license-file: license.txt

build-type: Simple
cabal-version: >=1.10

library
    hs-source-dirs: library
    default-language: Haskell2010

    exposed-modules:
        Stripe.Concepts

    build-depends:
        base
      , bytestring
      , text
