name: stripe-scotty
version: 0.1.0.0

synopsis: Listen for Stripe webhook events with Scotty

description:
    This package provides support for writing a
    <https://stripe.com/ Stripe> webhook server using Scotty.

homepage:    https://github.com/typeclasses/stripe
bug-reports: https://github.com/typeclasses/stripe/issues

author:     Chris Martin
maintainer: Chris Martin, Julie Moronuki

copyright: 2018 Typeclass Consulting, LLC
license: MIT
license-file: license.txt

build-type: Simple
cabal-version: >=1.10

library
    hs-source-dirs: library
    default-language: Haskell2010

    exposed-modules:
        Stripe.Scotty

    build-depends:
        aeson
      , base
      , bytestring
      , http-types
      , scotty
      , stripe-concepts
      , stripe-signature
      , text
      , unordered-containers
