cabal-version: 3.0

name: stripe-scotty
version: 1.1.0.3
synopsis: Listen for Stripe webhook events with Scotty
category: Web

description:
    This package provides support for writing a
    <https://stripe.com/ Stripe> webhook server using
    <https://hackage.haskell.org/package/scotty Scotty>.

homepage:    https://github.com/typeclasses/stripe
bug-reports: https://github.com/typeclasses/stripe/issues

author:     Chris Martin
maintainer: Chris Martin, Julie Moronuki

copyright: 2019-2021 Mission Valley Software LLC
license: MIT
license-file: license.txt

extra-source-files: *.md

library
    hs-source-dirs: library
    default-language: Haskell2010

    exposed-modules:
        Stripe.Scotty

    build-depends:
      , aeson ^>= 2.0 || ^>= 2.1
      , base ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17
      , bytestring ^>= 0.10 || ^>= 0.11
      , http-types ^>= 0.12
      , scotty ^>= 0.12
      , stripe-concepts ^>= 1.0
      , stripe-signature ^>= 1.0
      , text ^>= 1.2 || ^>= 2.0
