name: stripe-wreq
version: 0.1.0.0

synopsis: Use the Stripe API via Wreq

description:
    This package helps you make requests to the
    <https://stripe.com/ Stripe> API in conjunction with
    the <https://hackage.haskell.org/package/wreq wreq> package.
    This is a minimal library that makes no attempt obscure
    either its underpinnings in Wreq or any of the details of the
    Stripe API. Responses are returned as
    <https://hackage.haskell.org/package/aeson aeson> values.

homepage:    https://github.com/typeclasses/stripe
bug-reports: https://github.com/typeclasses/stripe/issues

author:     Chris Martin
maintainer: Chris Martin, Julie Moronuki

copyright: 2018 Typeclass Consulting, LLC
license: MIT
license-file: license.txt

build-type: Simple
cabal-version: >=1.10

library
    hs-source-dirs: library
    default-language: Haskell2010

    exposed-modules:
        Stripe.Wreq

    build-depends:
        aeson
      , base
      , bytestring
      , lens
      , stripe-concepts
      , text
      , unordered-containers
      , wreq
